@@ -28,6 +28,7 @@
   * fixing small buy when detecting latest CK version (works even if non-integer value)
   * added support to pack files with multiple pattern (useful to transfer new solutions
     via Internet when crowdsourcing experiments)
+  * adding unzip_file function (to pack and exchange solutions when crowdsourcing experiments)
 
 * V1.6.12
   * adding CK_PYTHON env variable in ck script 
